# pro-bono

./: README.md  extract.py  pyproject.toml
blog/: models.py
blog/migrations/: 0001_initial.py  0002_blogpage.py
blog/templates/blog/: blog_page.html
frontend/app/blog/: page.tsx
frontend/app/blog/[blog]/: pages.tsx
home/migrations/: 0003_homepage_body.py
home/templates/home/: home_page.html
mysite/: urls.py
mysite/settings/: base.py  dev.py
