[tool.poetry]
name = "gamacidadao-wagtail"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = ">=4.2,<4.3"
wagtail = ">=5.2,<5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
